# rust-actix-diesel

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-12-14-192155_create_events/: up.sql
src/: main.rs
src/directory/: database.rs
src/handlers/: handler.rs
src/models/: event.rs
