[package]
name = "eventsapi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
r2d2 = "0.8.10"
serde = { version = "1.0.216", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
